# gba

./: .gitignore  CHANGELOG.md  Cargo.toml  justfile  release.sh
.github/workflows/: publish-agb-xm.yml  rust.yml
agb/: build.rs  crt0.s
agb-audio-compressor/: Cargo.toml
agb-audio-compressor/src/: main.rs  mu_table.rs  sample.rs
agb-gbafix/src/: lib.rs
agb-sound-converter/: Cargo.toml
agb-sound-converter/src/: lib.rs  xm_generator.rs
agb-xm/: Cargo.toml
agb-xm/src/: lib.rs
agb-xm/tests/: parsing.rs
agb/agbabi/: memcpy.S
agb/examples/: algar_-_ninja_on_speed.LICENSE.txt  dma_effect_background_colour.rs  dma_effect_background_scroll.rs  dma_effect_circular_window.rs  mixer_basic.rs  xm_player.rs
agb/src/: dma.rs  lib.rs
agb/src/display/: blend.rs  font.rs  window.rs
agb/src/display/tiled/: vram_manager.rs
agb/src/sound/mixer/: mixer.s  mod.rs  sw_mixer.rs
emulator/: Cargo.toml
emulator/mgba-sys/: build.rs  wrapper.h
emulator/mgba/src/: lib.rs  vfile.rs
emulator/mgba/src/vfile/: memory.rs  shared.rs
emulator/tapir-emulator/: Cargo.toml
emulator/tapir-emulator/src/: audio_stream.rs  framerate.rs  gba_audio.rs  main.rs  resampler.rs
emulator/test-runner/src/: main.rs
examples/the-hat-chooses-the-wizard/: Cargo.toml  build.rs
examples/the-hat-chooses-the-wizard/gfx/: boss.aseprite  sprites.aseprite
examples/the-hat-chooses-the-wizard/map/: 1-1.tmx  1-2.tmx  slime-boss.tmx
examples/the-hat-chooses-the-wizard/src/: enemies.rs  entity.rs  lib.rs  sfx.rs
website/public/: game.gba
website/src/: bindings.tsx  mgba.tsx
(+5 files in other folders)
